--- a/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
+++ b/src/YannickMahe/SelfHostedVideosBundle/Resources/views/Default/menu.html.twig
@@ -22,7 +22,7 @@
     </ul>
     <form class="navbar-form navbar-left" role="search" method="GET"  action="{{ path('yannick_mahe_self_hosted_videos_list') }}">
       <div class="form-group">
-        <input type="text" class="form-control"  name="q" value="{{ q }}" placeholder="Search video...">
+        <input type="text" id="search-field" class="form-control"  name="q" value="{{ q }}" placeholder="Search video...">
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
